# SafeLens

./: .gitignore  AGENTS.md  AUDIT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  README.md  RELEASE_INTEGRITY.md  ROADMAP.md  SECURITY.md  TESTING.md  TRUST_ASSUMPTIONS.md  VERIFY.md  package-lock.json  package.json  tailwind.config.ts  test-cowswap-gnosis.json  test-lido-stake.json  test-wxdai-gnosis.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
.opencode/: ralph-history.json  ralph-loop.state.json
app/: globals.css  layout.tsx
app/analyze/: page.tsx
app/settings/: page.tsx
app/verify/: page.tsx
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.manual-chunks.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: consensus.rs  main.rs  simulation_replay.rs
apps/desktop/src/components/: address-display.tsx  call-array.tsx  hash-verification-details.tsx  interpretation-card.tsx  sidebar.tsx  trust-badge.tsx
apps/desktop/src/components/interpretations/: erc7730-card.tsx  (+6 more)
apps/desktop/src/lib/: consensus-details.ts  network-support.ts  policy-details.ts  safety-checks.ts  safety-checks.tsx  simulation-details.ts  simulation-freshness.ts  simulation-unavailable.ts  use-evidence-verification.ts  verification-copy.ts
apps/desktop/src/screens/: AddressBookScreen.tsx  ERC7730Screen.tsx  SettingsScreen.tsx  VerifyScreen.tsx
apps/desktop/tests/: airgap-config.test.ts  consensus-details.test.ts  network-support.test.ts  policy-details.test.ts  safety-checks.test.ts  simulation-details.test.ts  simulation-freshness.test.ts  simulation-unavailable.test.ts  verification-copy.test.ts  vite-manual-chunks.test.ts
apps/generator/: .env  eslint.config.mjs  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/generator/.next/: trace
apps/generator/.next/server/: server-reference-manifest.json
apps/generator/app/: globals.css  layout.tsx  page.tsx
apps/generator/components/: address-display.tsx
apps/generator/components/ui/: card.tsx  input.tsx
apps/generator/lib/: consensus-enrichment.test.ts  consensus-enrichment.ts  consensus-proof-summary.test.ts  consensus-proof-summary.ts  download.test.ts  download.ts  rpc-redaction.test.ts  rpc-redaction.ts
apps/shared-theme/: package.json  tailwind.js  tailwind.ts  theme.css
components/: address-display.tsx  call-array.tsx  config-fingerprint.tsx  interpretation-card.tsx  providers.tsx  trust-badge.tsx
components/interpretations/: cowswap-twap-card.tsx
components/ui/: alert.tsx  button.tsx  card.tsx  textarea.tsx  toast.tsx
docs/: README.md
docs/architecture/: interpretation-precedence.md  onchain-verification-ui.md  verification-source-contract.md
docs/audit/: AUDITOR_PACKET.md  dependency-footprint.baseline.md
docs/runbooks/: erc7730-bundle-update.md  simulation-replay-benchmark.md
lib/: types.ts
lib/decode/: index.ts  normalize.ts  types.ts
lib/interpret/: cowswap.ts
lib/interpret/__tests__/: cowswap.test.ts
lib/package/: creator.ts
lib/package/__tests__/: creator.test.ts
lib/safe/: api.ts  hash.ts  signatures.ts
lib/safe/__tests__/: hash.test.ts
lib/settings/: hooks.tsx  index.ts  store.ts
lib/settings/__tests__/: fingerprint.test.ts  resolve.test.ts  store.test.ts
scripts/audit/: deps.sh
(+8 files in other folders)
